--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,40 @@
     <title>{{title}}</title>
 </head>
 <body>
+<div>
+    <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark justify-content-between">
+        <div class="badge badge-primary text-wrap" style="width: 13rem;">
+            <h4>АлиАкспресc</h4>
+        </div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div>
+            {% if username %}
+            <p>Вы вошли как {{ username }}</p>
+            {% else %}
+            <a class="btn btn-primary" href="/register" role="button">Регистрация</a>
+            <a class="btn btn-success" href="/login" role="button">Войти</a>
+            {% endif %}
+        </div>
+        <div>
+            <form class="form-inline my-2 my-lg-0">
+              <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+              <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+            </form>
+        </div>
 
+    </nav>
+</div>
+<br>
+<br>
 <main role="main" class="container">
     {% block content %}{% endblock %}
 </main>
