--- a/templates/products.html
+++ b/templates/products.html
@@ -1,10 +1,9 @@
 {% extends "base.html" %}
 
 {% block content %}
+<div>
 <h1 align="center">Товары:</h1>
-{% if username %}
-Вы вошли как {{ username }}
-{% endif %}
+</div>
 {% for item in products%}
 <div>
     <h2>Product # {{item.id}}</h2>
@@ -16,6 +15,7 @@
               <td>Title</td>
               <td>Number</td>
               <td>Image</td>
+              <td>Description</td>
             </tr>
           </thead>
           <tbody>
@@ -23,7 +23,8 @@
               <td>{{ item.seller }}</td>
               <td>{{ item.title }}</td>
               <td>{{ item.number }}</td>
-              <td bgcolor="#FFE475">{{ item.image }}</td>
+              <td>{{ item.image }}</td>
+              <td>{{ item.description }}</td>
             </tr>
           </tbody>
         </table>
