--- a/templates/register.html
+++ b/templates/register.html
@@ -1,11 +1,15 @@
-{% extends "base.html" %}
-
-{% block content %}
-<html lang="en">
+<!doctype html>
+<html lang="ru">
 <head>
-    <meta charset="UTF-8">
-    <title>Регистрация</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet"
+          href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+          integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+          crossorigin="anonymous">
+    <title>{{title}}</title>
 </head>
+<body>
 <h1>Регистрация</h1>
 <form action="" method="post" novalidate>
     {{ form.hidden_tag() }}
@@ -61,4 +65,4 @@
     </p>
     <p>{{ form.submit(type="submit", class="btn btn-primary") }}</p>
 </form>
-{% endblock %}
+</body>
