--- a/templates/addproduct.html
+++ b/templates/addproduct.html
@@ -12,69 +12,67 @@
 <body>
 <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark justify-content-between">
     <a class="btn btn-primary text-wrap" href="/" role="button" style="width: 10rem;"><h5>АлиАкспресс</h5></a>
-<!--    <div class="badge badge-primary text-wrap" style="width: 13rem;" align="center">-->
-<!--        <h4>АлиАкспресc</h4>-->
-<!--    </div>-->
 </nav>
 <br>
 <br>
 <br>
-<h1 align="center">Регистрация</h1>
+<h1 align="center">Добавление товара</h1>
 <form action="" method="post" novalidate>
     <div class="row">
     <div class="col"></div>
     <div class="col" align="center">
         {{ form.hidden_tag() }}
         <p>
-            {{ form.name.label }}<br>
-            {{ form.name(class="form-control", type="string", placeholder="Ваше имя") }}<br>
-            {% for error in form.name.errors %}
+            {{ form.title.label }}<br>
+            {{ form.title(class="form-control", placeholder="Название") }}<br>
+            {% for error in form.title.errors %}
                 <div class="alert alert-danger" role="alert">
                     {{ error }}
                 </div>
             {% endfor %}
         </p>
         <p>
-            {{ form.email.label }}<br>
-            {{ form.email(class="form-control", placeholder="Ваш email") }}<br>
-            {% for error in form.email.errors %}
+            {{ form.description.label }}<br>
+            {{ form.description(class="form-control", placeholder="Описание") }}<br>
+            {% for error in form.description.errors %}
                 <div class="alert alert-danger" role="alert">
                     {{ error }}
                 </div>
             {% endfor %}
         </p>
         <p>
-            {% if emailmassage %}
-                <div class="alert alert-danger" role="alert">
-                    {{ emailmassage }}
-                </div>
-            {% endif %}
-        </p>
-        <p>
-            {{ form.password1.label }}<br>
-            {{ form.password1(class="form-control", type="password", placeholder="Ваш пароль") }}<br>
-            {% for error in form.password1.errors %}
+            {{ form.number.label }}<br>
+            {{ form.number(class="form-control", placeholder="Количество") }}<br>
+            {% for error in form.number.errors %}
                 <div class="alert alert-danger" role="alert">
                     {{ error }}
                 </div>
             {% endfor %}
         </p>
+            <p>
+                {% if numbermassage %}
+                    <div class="alert alert-danger" role="alert">
+                        {{ numbermassage }}
+                    </div>
+                {% endif %}
+            </p>
         <p>
-            {{ form.password2.label }}<br>
-            {{ form.password2(class="form-control", type="password", placeholder="Повторите ваш пароль") }}<br>
-            {% for error in form.password2.errors %}
+            {{ form.price.label }}<br>
+            {{ form.price(class="form-control", placeholder="Цена") }}<br>
+            {% for error in form.price.errors %}
                 <div class="alert alert-danger" role="alert">
                     {{ error }}
                 </div>
             {% endfor %}
         </p>
-        <p>
-            {% if passwordmassage %}
-                <div class="alert alert-danger" role="alert">
-                    {{ passwordmassage }}
-                </div>
-            {% endif %}
-        </p>
+            <p>
+                {% if pricemassage %}
+                    <div class="alert alert-danger" role="alert">
+                        {{ pricemassage }}
+                    </div>
+                {% endif %}
+            </p>
+
         <p>{{ form.submit(type="submit", class="btn btn-primary") }}</p>
     </div>
     <div class="col"></div>
