--- a/templates/addproduct.html
+++ b/templates/addproduct.html
@@ -12,7 +12,35 @@
 <body>
 <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark justify-content-between">
     <a class="btn btn-primary text-wrap" href="/" role="button" style="width: 10rem;"><h5>АлиАкспресс</h5></a>
-</nav>
+<!--        <div class="badge badge-primary text-wrap" style="width: 13rem;">-->
+<!--            <h4>АлиАкспресc</h4>-->
+<!--        </div>-->
+        <div></div>
+        <div>
+            {% if username %}
+                <a class="btn btn-warning" href="/add_product" role="button">Добавить товар</a>
+            {% endif %}
+        </div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div>
+            {% if username %}
+                <a class="display-6 text-white" >{{ username }}</a>
+                <a class="btn btn-success" href="/log_out" role="button">Выйти</a>
+            {% else %}
+                <a class="btn btn-primary" href="/register" role="button">Регистрация</a>
+                <a class="btn btn-success" href="/login" role="button">Войти</a>
+            {% endif %}
+        </div>
+        <div></div>
+
+    </nav>
 <br>
 <br>
 <br>
