--- a/templates/product.html
+++ b/templates/product.html
@@ -2,33 +2,22 @@
 
 {% block content %}
 <div>
-<h1 align="center">Товары:</h1>
+<h1 align="center">{{ title }}</h1>
 </div>
-{% for item in products %}
 <div>
-    <h2>Product # {{item.id}}</h2>
+    <h2>Product # {{ product.id }}</h2>
     <div>
         <table class="table">
-          <thead>
-            <tr bgcolor="#B6B6B6">
-              <td>Seller</td>
-              <td>Title</td>
-              <td>Number</td>
-              <td>Image</td>
-              <td>Description</td>
-            </tr>
-          </thead>
           <tbody>
             <tr bgcolor="#D2D2D2">
-              <td>{{ item.seller }}</td>
-              <td>{{ item.title }}</td>
-              <td>{{ item.number }}</td>
-              <td>{{ item.image }}</td>
-              <td>{{ item.description }}</td>
+              <td>{{ product.seller }}</td>
+              <td>{{ product.title }}</td>
+              <td>{{ product.number }}</td>
+              <td>{{ product.image }}</td>
+              <td>{{ product.description }}</td>
             </tr>
           </tbody>
         </table>
     </div>
 </div>
-{% endfor %}
 {% endblock %}
