--- a/templates/products.html
+++ b/templates/products.html
@@ -24,7 +24,7 @@
               <td>{{ item.seller }}</td>
               <td>{{ item.title }}</td>
               <td>{{ item.number }}</td>
-              <td>{{ item.image }}</td>
+              <td><img src={{item.image}} alt="Ну не нашлась картинка" class="img-thumbnail"></td>
               <td>{{ item.description }}</td>
               <td><a class="btn btn-dark" href= {{item.link}} role="button">Открыть страницу в магазине</a></td>
             </tr>
