--- a/templates/register.html
+++ b/templates/register.html
@@ -23,7 +23,7 @@
 <form action="" method="post" novalidate>
     <div class="row">
     <div class="col"></div>
-    <div class="col" align="center">
+    <div class="col-auto" align="center">
         {{ form.hidden_tag() }}
         <p>
             {{ form.name.label }}<br>
