--- a/templates/base.html
+++ b/templates/base.html
@@ -35,22 +35,18 @@
                 <a class="btn btn-success" href="/login" role="button">Войти</a>
             {% endif %}
         </div>
-        <div>
-            <select class="custom-select custom-select-sm">
-              <option selected>Open this select menu</option>
-              <option value="1">One</option>
-              <option value="2">Two</option>
-              <option value="3">Three</option>
-            </select>
-        </div>
-        <div>
-            <form class="form-inline my-2 my-lg-0">
-              <input class="form-control mr-sm-2" type="search" placeholder="Поиск товара" aria-label="Search">
-              <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Поиск</button>
-            </form>
-        </div>
-        <div>
-        </div>
+
+        <form class="form-inline my-2 my-lg-0" method="post">
+            <div>
+
+            </div>
+            <div>
+                <input type="search" class="form-control" id="search" placeholder="Название..." name="search">
+            </div>
+            <div>
+                <button class="btn btn-outline-success my-2 my-sm-0" role="button">Поиск</button>
+            </div>
+        </form>
 
     </nav>
 </div>
