Last commit Улучшена сортировка

--- a/templates/addproduct.html
+++ b/templates/addproduct.html
@@ -1,6 +1,24 @@
-{% extends "base.html" %}
-
-{% block content %}
+<!doctype html>
+<html lang="ru">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet"
+          href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+          integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+          crossorigin="anonymous">
+    <title>{{title}}</title>
+</head>
+<body>
+<nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark justify-content-between">
+    <a class="btn btn-primary text-wrap" href="/" role="button" style="width: 10rem;"><h5>АлиАкспресс</h5></a>
+<!--    <div class="badge badge-primary text-wrap" style="width: 13rem;" align="center">-->
+<!--        <h4>АлиАкспресc</h4>-->
+<!--    </div>-->
+</nav>
+<br>
+<br>
+<br>
 <h1 align="center">Добавление товара</h1>
 <form action="" method="post" novalidate>
     <div class="row">
@@ -20,6 +38,15 @@
             {{ form.description.label }}<br>
             {{ form.description(class="form-control", placeholder="Описание") }}<br>
             {% for error in form.description.errors %}
+                <div class="alert alert-danger" role="alert">
+                    {{ error }}
+                </div>
+            {% endfor %}
+        </p>
+        <p>
+            {{ form.product_type.label }}<br>
+            {{ form.product_type(class="form-control", placeholder="ПК, телефон или пр.") }}<br>
+            {% for error in form.product_type.errors %}
                 <div class="alert alert-danger" role="alert">
                     {{ error }}
                 </div>
@@ -64,4 +91,3 @@
     </div>
 </form>
 </body>
-{% endblock %}
