--- a/templates/product.html
+++ b/templates/product.html
@@ -11,6 +11,7 @@
                     <tr>
                         <td><img src={{product.image}} alt="Ну не нашлась картинка" class="img-thumbnail"></td>
                         <td>Описание:<br>{{ product.description }}</td>
+                        <td>Тип:<br>{{ product.product_type }}</td>
                         <td>Продавец:<br>{{ product.seller }}</td>
                         <td>Осталось:<br>{{ product.number }} шт.</td>
                         <td>Цена:<br>{{ product.price }} $</td>
