--- a/templates/base.html
+++ b/templates/base.html
@@ -37,8 +37,13 @@
         </div>
 
         <form class="form-inline my-2 my-lg-0" method="post">
-            <div>
-
+            <div class="form-group">
+                <select class="form-control" id="product_type" name="product_type">
+                  <option>Все</option>
+                    {% for item in products_types %}
+                        <option>{{ item }}</option>
+                    {% endfor %}
+                </select>
             </div>
             <div>
                 <input type="search" class="form-control" id="search" placeholder="Название..." name="search">
